--- a/arabic_text_readability_analysis/requirements.txt
+++ b/arabic_text_readability_analysis/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.2.7
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.2
 dj-database-url==0.5.0
 Django==3.0.6
 gunicorn==20.0.4
+idna==2.9
+inexactsearch==1.0.2
 joblib==0.14.1
+language-tool-python==2.2.1
 nltk==3.5
 numpy==1.18.4
 pandas==1.0.3
@@ -12,8 +17,13 @@ Pyphen==0.9.5
 python-dateutil==2.8.1
 pytz==2020.1
 regex==2020.5.13
+requests==2.23.0
+silpa-common==0.3
 six==1.14.0
+soundex==1.1.3
+spellchecker==0.4
 sqlparse==0.3.1
 syllables==0.1.0
 tqdm==4.46.0
+urllib3==1.25.9
 whitenoise==5.0.1
