--- a/arabic_text_readability_analysis/requirements.txt
+++ b/arabic_text_readability_analysis/requirements.txt
@@ -1,29 +1,55 @@
+alabaster==0.7.12
 asgiref==3.2.7
+Babel==2.8.0
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
+cycler==0.10.0
 dj-database-url==0.5.0
 Django==3.0.6
+docutils==0.16
 gunicorn==20.0.4
 idna==2.9
+imagesize==1.2.0
+indic-nlp-library==0.6
+indicnlp==0.0.1
 inexactsearch==1.0.2
+Jinja2==2.11.2
 joblib==0.14.1
+kiwisolver==1.2.0
 language-tool-python==2.2.1
+MarkupSafe==1.1.1
+matplotlib==3.2.2
 nltk==3.5
 numpy==1.18.4
+packaging==20.4
 pandas==1.0.3
 psycopg2==2.8.5
+Pygments==2.6.1
+pyparsing==2.4.7
 Pyphen==0.9.5
 python-dateutil==2.8.1
 pytz==2020.1
 regex==2020.5.13
 requests==2.23.0
+scikit-learn==0.23.1
+scipy==1.4.1
 silpa-common==0.3
 six==1.14.0
+sklearn==0.0
+snowballstemmer==2.0.0
 soundex==1.1.3
 spellchecker==0.4
+Sphinx==3.1.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.3.1
 syllables==0.1.0
+threadpoolctl==2.1.0
 tqdm==4.46.0
 urllib3==1.25.9
 whitenoise==5.0.1
